--- a/Testing/test.html
+++ b/Testing/test.html
@@ -17,7 +17,8 @@
 
       <!-- include the chapter -->
       <script type="text/javascript" src= "graph.js"></script>
-      <script type="text/javascript" src= "3_kruskal.js"></script>
+      <script type="text/javascript" src= "../src/mobject/mobject.js"></script>
+      <script type="text/javascript" src= "test.js"></script>
   </head>
   <body>
 
