--- a/Testing/test.html
+++ b/Testing/test.html
@@ -5,6 +5,7 @@
       <title>Graph Algo</title>
 
       <!-- include external libraries -->
+      <script type="text/javascript" src="../lib/numjs/numjs.min.js"></script>
       <script type="text/javascript" src="../lib/p5/p5.min.js"></script>
 
       <!-- include internal source files -->
