--- a/Testing/test.html
+++ b/Testing/test.html
@@ -19,6 +19,7 @@
       <!-- include the chapter -->
       <script type="text/javascript" src= "graph.js"></script>
       <script type="text/javascript" src= "../src/mobject/mobject.js"></script>
+      <script type="text/javascript" src= "../src/mobject/types/vectorizedMobject.js"></script>
       <script type="text/javascript" src= "test.js"></script>
   </head>
   <body>
