--- a/Testing/test.html
+++ b/Testing/test.html
@@ -6,21 +6,26 @@
 
       <!-- include external libraries -->
       <script type="text/javascript" src="../lib/numjs/numjs.min.js"></script>
+      <!-- <script type="text/javascript" src="../lib/p5SVG/p5.svg.js"></script> -->
+      <script src="https://unpkg.com/p5.js-svg@1.5.1"></script>
       <script type="text/javascript" src="../lib/p5/p5.min.js"></script>
 
       <!-- include internal source files -->
-      <script type="text/javascript" src="../src/graphics.js"></script>
-      <script type="text/javascript" src="../src/globals.js"></script>
-      <script type="text/javascript" src="../src/text.js"></script>
-      <script type="text/javascript" src="../src/timer.js"></script>
-      <script type="text/javascript" src="../src/utils.js"></script>
-      <script type="text/javascript" src="../src/brain.js"></script>
+      <script type="module" src="../src/constants.js"></script>
+      <script type="module" src="../src/manim.js"></script>
+      <!-- <script type="text/javascript" src="../src/graphics.js"></script> -->
+      <!-- <script type="text/javascript" src="../src/text.js"></script> -->
+      <!-- <script type="text/javascript" src="../src/timer.js"></script> -->
+      <!-- <script type="text/javascript" src="../src/utils.js"></script> -->
+      <!-- <script type="text/javascript" src="../src/brain.js"></script> -->
 
       <!-- include the chapter -->
-      <script type="text/javascript" src= "graph.js"></script>
+      <!-- <script type="text/javascript" src= "graph.js"></script> -->
+      <!-- <script type="text/javascript" src= "../src/mobject/mobject.js"></script>
       <script type="text/javascript" src= "../src/mobject/mobject.js"></script>
-      <script type="text/javascript" src= "../src/mobject/types/vectorizedMobject.js"></script>
-      <script type="text/javascript" src= "test.js"></script>
+      <script type="text/javascript" src= "../src/mobject/types/graphicMobject.js"></script>
+      <script type="text/javascript" src= "../src/mobject/geometry/circle.js"></script>
+      <script type="text/javascript" src= "test.js"></script> -->
   </head>
   <body>
 
