--- a/Testing/test.html
+++ b/Testing/test.html
@@ -6,13 +6,16 @@
 
       <!-- include external libraries -->
       <script type="text/javascript" src="../lib/numjs/numjs.min.js"></script>
+      <script type="text/javascript" src="../lib/p5/p5.min.js"></script>
       <!-- <script type="text/javascript" src="../lib/p5SVG/p5.svg.js"></script> -->
       <script src="https://unpkg.com/p5.js-svg@1.5.1"></script>
-      <script type="text/javascript" src="../lib/p5/p5.min.js"></script>
 
       <!-- include internal source files -->
-      <script type="module" src="../src/constants.js"></script>
-      <script type="module" src="../src/manim.js"></script>
+      <script type="text/javascript" src="../src/constants.js"></script>
+      <script type="text/javascript" src="../src/animation/animation.js"></script>
+      <script type="text/javascript" src="../src/mobject/mobject.js"></script>
+      <script type="text/javascript" src="../src/scene/scene.js"></script>
+      <script type="text/javascript" src="../src/manim.js"></script>
       <!-- <script type="text/javascript" src="../src/graphics.js"></script> -->
       <!-- <script type="text/javascript" src="../src/text.js"></script> -->
       <!-- <script type="text/javascript" src="../src/timer.js"></script> -->
@@ -25,7 +28,8 @@
       <script type="text/javascript" src= "../src/mobject/mobject.js"></script>
       <script type="text/javascript" src= "../src/mobject/types/graphicMobject.js"></script>
       <script type="text/javascript" src= "../src/mobject/geometry/circle.js"></script>
-      <script type="text/javascript" src= "test.js"></script> -->
+      -->
+      <script type="text/javascript" src= "test.js"></script>
   </head>
   <body>
 
