--- a/Testing/test.html
+++ b/Testing/test.html
@@ -16,6 +16,7 @@
       <script type="text/javascript" src="../src/constants.js"></script>
       <script type="text/javascript" src="../src/animation/animation.js"></script>
       <script type="text/javascript" src="../src/mobject/mobject.js"></script>
+      <script type="text/javascript" src="../src/mobject/types/graphicMobject.js"></script>
       <script type="text/javascript" src="../src/scene/scene.js"></script>
       <script type="text/javascript" src="../src/manim.js"></script>
       <!-- <script type="text/javascript" src="../src/graphics.js"></script> -->
