--- a/Testing/test.html
+++ b/Testing/test.html
@@ -6,11 +6,9 @@
 
       <!-- include external libraries -->
       <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/stdlib-js/ndarray@umd/browser.js"></script> -->
-      <script type="text/javascript" src="../lib/consolemd/consolemd.min.js"></script>
+      <!-- <script type="text/javascript" src="../lib/consolemd/consolemd.min.js"></script> -->
       <script type="text/javascript" src="../lib/numjs/numjs.min.js"></script>
       <script type="text/javascript" src="../lib/p5/p5.min.js"></script>
-      <!-- <script type="text/javascript" src="../lib/p5SVG/p5.svg.js"></script> -->
-      <script src="https://unpkg.com/p5.js-svg@1.5.1"></script>
 
       <!-- include internal source files -->
       <script type="text/javascript" src="../src/constants.js"></script>
@@ -30,8 +28,8 @@
       <!-- <script type="text/javascript" src= "../src/mobject/mobject.js"></script>
       <script type="text/javascript" src= "../src/mobject/mobject.js"></script>
       <script type="text/javascript" src= "../src/mobject/types/graphicMobject.js"></script>
-      <script type="text/javascript" src= "../src/mobject/geometry/circle.js"></script>
-      -->
+      <script type="text/javascript" src= "../src/mobject/geometry/circle.js"></script> -->
+     
       <script type="text/javascript" src= "test.js"></script>
   </head>
   <body>
