--- a/Testing/test.html
+++ b/Testing/test.html
@@ -9,6 +9,7 @@
       <!-- <script type="text/javascript" src="../lib/consolemd/consolemd.min.js"></script> -->
       <script type="text/javascript" src="../lib/numjs/numjs.min.js"></script>
       <script type="text/javascript" src="../lib/p5/p5.min.js"></script>
+      <script type="text/javascript" src="../lib/colorjs/color.js"></script>
 
       <!-- include internal source files -->
       <script type="text/javascript" src="../src/constants.js"></script>
