--- a/Testing/test.html
+++ b/Testing/test.html
@@ -14,6 +14,7 @@
       <!-- include internal source files -->
       <script type="text/javascript" src="../src/constants.js"></script>
       <script type="text/javascript" src="../src/animation/animation.js"></script>
+      <script type="text/javascript" src="../src/animation/creation.js"></script>
       <script type="text/javascript" src="../src/mobject/mobject.js"></script>
       <script type="text/javascript" src="../src/mobject/types/graphicMobject.js"></script>
       <script type="text/javascript" src="../src/scene/scene.js"></script>
