--- a/Testing/test.html
+++ b/Testing/test.html
@@ -12,6 +12,7 @@
       <script type="text/javascript" src="../lib/colorjs/color.js"></script>
 
       <!-- include internal source files -->
+      <script type="text/javascript" src="../src/error/errorClasses.js"></script>
       <script type="text/javascript" src="../src/constants.js"></script>
       <script type="text/javascript" src="../src/animation/animation.js"></script>
       <script type="text/javascript" src="../src/animation/creation.js"></script>
