--- a/Testing/test.html
+++ b/Testing/test.html
@@ -18,6 +18,7 @@
       <script type="text/javascript" src="../src/animation/creation.js"></script>
       <script type="text/javascript" src="../src/mobject/mobject.js"></script>
       <script type="text/javascript" src="../src/mobject/types/graphicMobject.js"></script>
+      <script type="text/javascript" src="../src/mobject/geometry/square.js"></script>
       <script type="text/javascript" src="../src/scene/scene.js"></script>
       <script type="text/javascript" src="../src/manim.js"></script>
       <!-- <script type="text/javascript" src="../src/graphics.js"></script> -->
