--- a/Testing/test.html
+++ b/Testing/test.html
@@ -13,6 +13,7 @@
 
       <!-- include internal source files -->
       <script type="text/javascript" src="../src/error/errorClasses.js"></script>
+      <script type="text/javascript" src="../src/color/manimColor.js"></script>
       <script type="text/javascript" src="../src/constants.js"></script>
       <script type="text/javascript" src="../src/animation/animation.js"></script>
       <script type="text/javascript" src="../src/animation/creation.js"></script>
