--- a/Testing/test.html
+++ b/Testing/test.html
@@ -2,32 +2,24 @@
 <html lang="en">
   <head>
       <meta charset="UTF-8">
-      <title>Graph Algo</title>
+      <title>Manimjs</title>
 
       <!-- include external libraries -->
-      <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/stdlib-js/ndarray@umd/browser.js"></script> -->
       <!-- <script type="text/javascript" src="../lib/consolemd/consolemd.min.js"></script> -->
-      <script type="text/javascript" src="../lib/numjs/numjs.min.js"></script>
-      <script type="text/javascript" src="../lib/p5/p5.min.js"></script>
-      <!-- <script type="text/javascript" src="../lib/colorjs/color.js"></script> -->
+      <script type="module" src="../lib/numjs/numjs.min.js"></script>
 
       <!-- include internal source files -->
-      <script type="text/javascript" src="../src/error/errorClasses.js"></script>
-      <script type="text/javascript" src="../src/math.js"></script>
-      <script type="text/javascript" src="../src/color/manimColor.js"></script>
-      <script type="text/javascript" src="../src/constants.js"></script>
-      <script type="text/javascript" src="../src/animation/animation.js"></script>
-      <script type="text/javascript" src="../src/animation/creation.js"></script>
-      <script type="text/javascript" src="../src/mobject/mobject.js"></script>
-      <script type="text/javascript" src="../src/mobject/types/graphicMobject.js"></script>
-      <script type="text/javascript" src="../src/mobject/geometry/square.js"></script>
-      <script type="text/javascript" src="../src/scene/scene.js"></script>
-      <script type="text/javascript" src="../src/manim.js"></script>
-      <!-- <script type="text/javascript" src="../src/graphics.js"></script> -->
-      <!-- <script type="text/javascript" src="../src/text.js"></script> -->
-      <!-- <script type="text/javascript" src="../src/timer.js"></script> -->
-      <!-- <script type="text/javascript" src="../src/utils.js"></script> -->
-      <!-- <script type="text/javascript" src="../src/brain.js"></script> -->
+      <!-- <script type="text/javascript" src="../src/error/errorClasses.js"></script> -->
+      <!-- <script type="text/javascript" src="../src/math.js"></script> -->
+      <!-- <script type="text/javascript" src="../src/color/manimColor.js"></script> -->
+      <!-- <script type="text/javascript" src="../src/constants.js"></script> -->
+      <!-- <script type="text/javascript" src="../src/animation/animation.js"></script> -->
+      <!-- <script type="text/javascript" src="../src/animation/creation.js"></script> -->
+      <!-- <script type="text/javascript" src="../src/mobject/mobject.js"></script> -->
+      <!-- <script type="text/javascript" src="../src/mobject/types/graphicMobject.js"></script> -->
+      <!-- <script type="text/javascript" src="../src/mobject/geometry/square.js"></script> -->
+      <!-- <script type="text/javascript" src="../src/scene/scene.js"></script> -->
+      <!-- <script type="text/javascript" src="../src/manim.js"></script> -->
 
       <!-- include the chapter -->
       <!-- <script type="text/javascript" src= "graph.js"></script> -->
@@ -36,7 +28,7 @@
       <script type="text/javascript" src= "../src/mobject/types/graphicMobject.js"></script>
       <script type="text/javascript" src= "../src/mobject/geometry/circle.js"></script> -->
      
-      <script type="text/javascript" src= "test.js"></script>
+      <!-- <script type="text/javascript" src= "test.js"></script> -->
   </head>
   <body>
 
