Added Renderer2D, defineUndef, and edited Scene to use Renderer2D

--- a/Testing/test.html
+++ b/Testing/test.html
@@ -6,9 +6,11 @@
 
       <!-- include external libraries -->
       <!-- <script type="text/javascript" src="../lib/consolemd/consolemd.min.js"></script> -->
-      <script type="module" src="../lib/numjs/numjs.min.js"></script>
+      <script type="text/javascript" src="../lib/numjs/numjs.min.js"></script>
 
       <!-- include internal source files -->
+      <!-- <script type="module" src="../src/renderer/renderer2d.js"></script> -->
+      <!-- <script type="module" src="../src/scene/scene.js"></script> -->
       <!-- <script type="text/javascript" src="../src/error/errorClasses.js"></script> -->
       <!-- <script type="text/javascript" src="../src/math.js"></script> -->
       <!-- <script type="text/javascript" src="../src/color/manimColor.js"></script> -->
@@ -28,7 +30,7 @@
       <script type="text/javascript" src= "../src/mobject/types/graphicMobject.js"></script>
       <script type="text/javascript" src= "../src/mobject/geometry/circle.js"></script> -->
      
-      <!-- <script type="text/javascript" src= "test.js"></script> -->
+      <script type="module" src= "test.js"></script>
   </head>
   <body>
 
