Polygons and Point 3D. Also added global scaling in Render2D.

--- a/Testing/test.html
+++ b/Testing/test.html
@@ -7,6 +7,9 @@
       <!-- include external libraries -->
       <!-- <script type="text/javascript" src="../lib/consolemd/consolemd.min.js"></script> -->
       <script type="text/javascript" src="../lib/numjs/numjs.min.js"></script>
+      <script>
+        console.log(nj.array().constructor.name);
+      </script>
 
       <!-- include internal source files -->
       <!-- <script type="module" src="../src/renderer/renderer2d.js"></script> -->
