--- a/Testing/test.html
+++ b/Testing/test.html
@@ -4,6 +4,12 @@
       <meta charset="UTF-8">
       <title>Manimjs</title>
 
+      <style>
+        body {
+          background-color: #1f1f1f;
+        }
+      </style>
+
       <!-- include external libraries -->
       <!-- <script type="text/javascript" src="../lib/consolemd/consolemd.min.js"></script> -->
       <script type="text/javascript" src="../lib/numjs/numjs.min.js"></script>
