--- a/Testing/test.html
+++ b/Testing/test.html
@@ -12,33 +12,12 @@
 
       <!-- include external libraries -->
       <!-- <script type="text/javascript" src="../lib/consolemd/consolemd.min.js"></script> -->
-      <script type="text/javascript" src="../lib/numjs/numjs.min.js"></script>
+      <script type="text/javascript" src="../lib/mathjs/math.js"></script>
       <script>
         
       </script>
 
-      <!-- include internal source files -->
-      <!-- <script type="module" src="../src/renderer/renderer2d.js"></script> -->
-      <!-- <script type="module" src="../src/scene/scene.js"></script> -->
-      <!-- <script type="text/javascript" src="../src/error/errorClasses.js"></script> -->
-      <!-- <script type="text/javascript" src="../src/math.js"></script> -->
-      <!-- <script type="text/javascript" src="../src/color/manimColor.js"></script> -->
-      <!-- <script type="text/javascript" src="../src/constants.js"></script> -->
-      <!-- <script type="text/javascript" src="../src/animation/animation.js"></script> -->
-      <!-- <script type="text/javascript" src="../src/animation/creation.js"></script> -->
-      <!-- <script type="text/javascript" src="../src/mobject/mobject.js"></script> -->
-      <!-- <script type="text/javascript" src="../src/mobject/types/graphicMobject.js"></script> -->
-      <!-- <script type="text/javascript" src="../src/mobject/geometry/square.js"></script> -->
-      <!-- <script type="text/javascript" src="../src/scene/scene.js"></script> -->
-      <!-- <script type="text/javascript" src="../src/manim.js"></script> -->
-
       <!-- include the chapter -->
-      <!-- <script type="text/javascript" src= "graph.js"></script> -->
-      <!-- <script type="text/javascript" src= "../src/mobject/mobject.js"></script>
-      <script type="text/javascript" src= "../src/mobject/mobject.js"></script>
-      <script type="text/javascript" src= "../src/mobject/types/graphicMobject.js"></script>
-      <script type="text/javascript" src= "../src/mobject/geometry/circle.js"></script> -->
-     
       <script type="module" src= "test.js"></script>
   </head>
   <body>
